# entari-plugin-webui

./: .gitignore  LICENSE  README.md  basic_config_schema.json  entari.schema.json  entari.yml  pyproject.toml
.github/workflows/: CI.yml  build.yml  release.yml  test.yml
docs/superpowers/plans/: 2026-06-30-phase-01-foundation.md  2026-06-30-phase-02-auth.md  2026-06-30-phase-03-plugins.md  2026-06-30-phase-04-config.md  2026-06-30-phase-05-stats.md  2026-06-30-phase-06-market.md  2026-06-30-phase-07-logs.md  2026-06-30-phase-08-extensions.md  2026-06-30-phase-09-frontend-foundation.md  2026-06-30-phase-10-schema-form-and-views.md  2026-06-30-phase-11-release.md  2026-07-02-phase-12-settings-merge.md  2026-07-02-sidebar-animation.md  README.md
docs/superpowers/specs/: 2026-06-30-webui-redesign-design.md  2026-07-02-settings-merge-design.md  2026-07-02-sidebar-animation-design.md
entari_plugin_webui/: __init__.py
entari_plugin_webui/backend/configs/: entari.yml
entari_plugin_webui/frontend/: index.html  plugins.json  runtime.config.js
entari_plugin_webui/frontend/assets/: CommunityView-B__Z1sTC.js  ContributorsView-DRH39142.js  ControlView-BUYoAbHt.js  DocsView-Ca9RXJP5.js  ExamplesIndex-BjJan95t.js  InstanceManager-CGzmlC9V.js  PluginMarketView-CNwuLh2S.css  PluginMarketView-dwcNYtta.js  PluginView-CP2j4osD.js  PluginView-DjwbJYHw.css  ProjectInfoView-DkjbEn6w.js  SetView-t6oeCSkn.js  el-card-GE_AQLmi.js  el-input-number-6tovycfL.js  el-table-column-BdrbbeFS.js  index-CYh49RPF.css  index-D813liDI.js  purify.es-Iq2qjZSd.js
example_plugin/: __init__.py  routes.py
example_plugin/static/: index.html
frontend/: .gitignore  app.vue  eslint.config.js  eslint.config.mjs  index.html  nuxt.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/components/: AdditionalPropertiesEditor.vue  ArrayField.vue  DynamicConfigForm.vue  ObjectField.vue  OneOfField.vue  SchemaField.vue
frontend/composables/: useApi.ts  useAuth.ts  useWebSocket.ts
frontend/layouts/: blank.vue  default.vue
frontend/middleware/: auth.global.ts
frontend/pages/: config.vue  index.vue  login.vue  logs.vue  market.vue  plugins.vue
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/api/: client.ts  instances.ts  plugin.ts  runtime.ts  users.ts
frontend/src/components/: AppIcon.vue  OfflineOverlay.vue  ThemeToggle.vue
frontend/src/composables/: useBackendHealth.ts  useChat.ts  useWebSocket.ts
frontend/src/extension-runtime/: ExtensionPanelHost.vue
frontend/src/i18n/: index.ts  zh-CN.ts
frontend/src/layouts/: Blank.vue  Default.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  chat.ts  counter.ts  logs.ts  menu.ts  settings.ts  (+2 more)
src/entari_plugin_webui/: __init__.py  adapter.py  config.py  utils.py
tests/: conftest.py  test_health.py  test_live_routes.py
tests/api/: test_auth.py  test_config.py  test_extensions.py  test_logs.py  test_market.py  test_plugins.py  test_stats.py
tests/core/: test_extension.py  test_log_stream.py  test_security.py  test_session.py
tests/services/: test_config_service.py  test_market_service.py  test_package_manager.py  test_plugin_service.py  test_stats_service.py
(+79 files in other folders)
